@@ -1,4 +1,4 @@
-$Id: History,v 1.24 2001-07-13 15:01:41 gcosmo Exp $
+$Id: History,v 1.25 2001-07-18 01:25:43 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Jul 17 2001, M.Asai (event-V03-02-01)
+- G4PrimaryParticle now stores the proper trackID.
 
 Jul 13 2001, G.Cosmo (event-V03-02-00)
 - Cleanup of pedantic warnings in Linux-g++ ANSI setup.
